--- a/17_style-layer/mimic.html
+++ b/17_style-layer/mimic.html
@@ -4,24 +4,24 @@
     <header style="background-color: lightgray; padding: 20px; text-align: center;">
         <h1 style="margin: 0; color: white; font-size: 2em;">h1 foo</h1>
     </header>
-
-    <nav style="float: left; width: 20%; background-color: #444; padding: 20px;">
-        <h2 style="margin-top: 0; color: #ccc;">nav foo</h2>
+    <div style="height:100px;background-color:#666">
+    <nav style="float: left; width: 20%; padding: 20px;background-color:#666;">
+        <h2 style="margin-top: 0; color: black;">nav foo</h2>
         <ul style="list-style-type: none; padding: 0;">
-            <li style="margin-bottom: 10px;">dis</li>
-            <li style="margin-bottom: 10px;">dat</li>
-            <li style="margin-bottom: 10px;">de udda ting</li>
+            <li style="margin-bottom: 10px;color: white;">dis</li>
+            <li style="margin-bottom: 10px;color: white;">dat</li>
+            <li style="margin-bottom: 10px;color: white;">de udda ting</li>
         </ul>
     </nav>
 
-    <main style="float: left; width: 60%; padding: 20px;">
-        <h2 style="margin-top: 0; color: #fff;">main foo heading</h2>
-        <p>Bacon ipsum dolor amet rump andouille short loin shank pig. Pork loin turkey shank spare ribs. Chicken tail corned beef hamburger porchetta prosciutto meatball ham biltong leberkas swine filet mignon short loin...</p>
-        <p>Ham hock bresaola turkey andouille jerky pancetta shoulder alcatra salami pork landjaeger tongue t-bone meatball...</p>
+    <main style="background-color: #666; float: left; width: 70%; padding: 20px;">
+        <h2 style="margin-top: 0; color: black;">main foo heading</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </main>
-
-    <footer style="background-color: lightgray; padding: 10px; text-align: right;">
-        <h1 style="margin: 0; color: white; font-size: 2em;">Copyright @ 2015 Clyde "Thluffy" Sinclair</h1>
-    </footer>
+    </div>
+    <div style="height:50px; position: relative; top: 300px; background-color: #999; padding: 10px; text-align: right;">
+        <p style="color: white; font-size:15px">Copyright @ 2015 Clyde "Thluffy" Sinclair</p>
+    </div>
 </body>
 </html>
