--- a/17_style-layer/mimic.html
+++ b/17_style-layer/mimic.html
@@ -1,27 +1,43 @@
-<!DOCTYPE html>
-<html>
-<body style="background-color: gray">
-    <header style="background-color: lightgray; padding: 20px; text-align: center;">
-        <h1 style="margin: 0; color: white; font-size: 2em;">h1 foo</h1>
-    </header>
-    <div style="height:100px;background-color:#666">
-    <nav style="float: left; width: 20%; padding: 20px;background-color:#666;">
-        <h2 style="margin-top: 0; color: black;">nav foo</h2>
-        <ul style="list-style-type: none; padding: 0;">
-            <li style="margin-bottom: 10px;color: white;">dis</li>
-            <li style="margin-bottom: 10px;color: white;">dat</li>
-            <li style="margin-bottom: 10px;color: white;">de udda ting</li>
-        </ul>
-    </nav>
+<!--
+  Ankita Saha, Andy Shyklo, Abidur Rahman
+  Python Pigs
+  SoftDev
+  K17 - HTML + CSS
+  2024-10-15
+  time spent: 1.5 hours
+-->
 
-    <main style="background-color: #666; float: left; width: 70%; padding: 20px;">
-        <h2 style="margin-top: 0; color: black;">main foo heading</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    </main>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <link rel="stylesheet" type="text/css" href="../static/style.css">
+    <meta charset="UTF-8">
+    <title>Foo Mimic</title>
+</head>
+<body>
+    <header>
+        <h1>h1 foo</h1>
+    </header>
+
+    <div class="container">
+        <nav>
+            <h2>nav foo</h2>
+            <ul>
+                <li><h2>dis</h2></li>
+                <li><h2>dat</h2></li>
+                <li><h2>de udda ting</h2></li>
+            </ul>
+        </nav>
+
+        <main>
+            <h2>main foo heading</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </main>
     </div>
-    <div style="height:50px; position: relative; top: 300px; background-color: #999; padding: 10px; text-align: right;">
-        <p style="color: white; font-size:15px">Copyright @ 2015 Clyde "Thluffy" Sinclair</p>
-    </div>
+
+    <footer>
+        <p>Copyright &copy; 2015 Clyde "Thluffy" Sinclair</p>
+    </footer>
 </body>
 </html>
