added team roster to index tailwind

--- a/22_fef/tw/index.html
+++ b/22_fef/tw/index.html
@@ -33,6 +33,11 @@
     </script>
     </head>
 	<body class="flex flex-col items-center justify-center min-h-screen text-center font-serif">
+    <div class="p-6 max-w-sm mx-auto bg-white rounded-xl shadow-lg flex items-center gap-x-4">
+      LilyPigs: Anastasia Lee and Andy Shyklo <br>
+      SoftDev <br>
+      November 20, 2024
+    </div>
     <div class="p-6 max-w-sm mx-auto bg-white rounded-xl shadow-lg items-center gap-x-4 text-center justify-center">
     <div class="p-6 max-w-sm mx-auto bg-white rounded-xl shadow-lg flex items-center gap-x-4">
       <h1 class="text-xl text-center hover:text-2xl">
